--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -23,7 +23,7 @@
     flex: 1;
     padding: 12px;
     font-size: 16px;
-    max-width: 40%;
+    max-width: 80%;
     border: 1px solid #ccc;
     border-radius: 120px;
     margin-right: 15px;
@@ -35,6 +35,12 @@
 .search-input:focus {
     border-color: #FFD700; /* Borda amarela ao focar */
     outline: none;
+}
+
+.lupa-pesquisa{
+    all: unset; 
+    cursor: pointer;
+    font-size: 25px;
 }
 
 /* Botão de Adicionar */
@@ -63,23 +69,24 @@
 /* Layout das equipes */
 .equipes {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
     justify-items: center;
     gap: 20px;
     padding: 20px;
-    background-color: #333; /* Fundo escuro para a área das equipes */
+    background-color: #333;
     border-radius: 10px;
 }
 
 /* Estilo para cada item de equipe */
 .equipe-item {
+    display: flex;
+    flex-direction: column; /* Alinha os itens em coluna */
+    justify-content: center;
+    align-items: center;
     background-color: #000; /* Fundo preto para os itens de equipe */
     color: #FFD700; /* Texto amarelo */
     width: 200px;
-    height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 200px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     cursor: pointer;
@@ -106,4 +113,52 @@
 
 .equipe-link:hover {
     color: #fff; /* Texto branco ao passar o mouse */
+}
+
+.titulo-tabela-equipe {
+    grid-column: 1 / -1; /* Faz o título ocupar todas as colunas do grid */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: 10px;
+}
+
+.equipe-opcao{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.equipe-opcao button{
+    background-color: #333333;
+    all: unset; 
+    cursor: pointer;
+    font-size: 20px;
+    margin: 0 10px;
+}
+
+.equipe-sem-nada{
+    display: grid;
+    grid-template-columns: 100%;
+    justify-items: center;
+}
+
+@media (max-width: 768px) {
+    .home {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .search-input {
+        max-width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .equipes {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
 }
